# lcg_plus

./: .gitignore  Animation.ipynb  FockFast.ipynb  Fock_approximation.ipynb  GBS_circuits.ipynb  Kerr-interaction.ipynb  README.md  Refactoring.ipynb  Wavefuntest.ipynb  mrmustard_comparison.ipynb  pyproject.toml
demos/: Animation.ipynb  Fock_approximation.ipynb  GBS_circuit_optimisation.ipynb  GBS_circuits.ipynb  Gradients.ipynb  Sampling.ipynb  mrmustard_comparison.ipynb  photon-number_moments.ipynb  single_mode_teleportation_circuit.ipynb  test_symplectic_gates.ipynb
demos_final/: Basics.ipynb  Fock_approximation.ipynb  Fock_coherent_decomp_radius.ipynb  GBS_circuit_optimisation.ipynb  GBS_circuits.ipynb  GKP_nonlinear_squeezing.ipynb  Gradients.ipynb  Simulate_coherent_bifurcation.ipynb  mrmustard_comparison.ipynb  nonG_ops.ipynb  nonG_states_ops.ipynb  photon-number_moments.ipynb  rank_reduce_figure.ipynb
figures/: GKP_states_wigner.ipynb
gbs-opts/eta=0.9/nmodes=2/: run_opt.py
gbs-opts/eta=0.9/nmodes=3/: run_opt.py
gbs-opts/eta=0.9/nmodes=4/: run_opt.py
gbs-opts/eta=0.9/nmodes=5/: run_opt.py
gbs-opts/eta=1/nmodes=2/: run_opt.py
inprogress/: FockFast.ipynb  GKP_from_Pauli_operators.ipynb  Kerr-interaction.ipynb  Pure_state_measurements.ipynb  Refactoring.ipynb  Testing_loss.ipynb
src/bosonicplus/: __init__.py  base.py  charfun.py  conversions.py  cost_functions.py  effective_sqz.py  effective_sqz_gradients.py  fidelity.py  from_sf.py  gkp_squeezing.py  optimizer.py  plotting.py  sampling.py  wavefunction.py
src/lcg_plus/: __init__.py  base.py  charfun.py  conversions.py  cost_functions.py  effective_sqz.py  fidelity.py  gkp_squeezing.py  optimizer.py  plotting.py  sampling.py  wavefunction.py
tests/: Untitled.ipynb  test_base.py  test_get_wigner.ipynb  test_interferometers.py  test_states.py
(+46 files in other folders)
