[project]
name = "bosonicplus"
version = "2024.12.19"
description = "Gaussian and non-Gaussian continuous-variable quantum optics simulations."
authors = [{name = "Olga Solodovnikova", email = "olgasol@dtu.dk"}]
dependencies = [
	"numpy",
	"scipy",
	"mpmath",
	"thewalrus",
	"matplotlib",
    "pytest"
	]
[project.urls]
homepage = "https://github.com/qpit/bosonicplus"
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
