[project]
name = "lcg_plus"
version = "2025.08.03"
description = "Gaussian and non-Gaussian continuous-variable quantum optics simulations."
authors = [{name = "Olga Solodovnikova", email = "olgasol@dtu.dk"}]
dependencies = [
	"numpy",
	"scipy",
	"thewalrus",
	"matplotlib",
    "pytest"
	]
[project.urls]
homepage = "https://github.com/qpit/lcg_plus"
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
